# VersusCore

./: .gitignore  Cargo.toml  README.md
assets/demo/: scene.toml
crates/vscr-core/: Cargo.toml
crates/vscr-core/src/: events.rs  lib.rs  output_bridge.rs  round.rs
crates/vscr-core/src/components/: collider.rs  health.rs  input.rs  kinematics.rs  mod.rs  resources.rs  state.rs  tags.rs  time.rs
crates/vscr-core/src/engine/: mod.rs  system_scheduler.rs
crates/vscr-core/src/systems/: collision_hitbox_system.rs  hit_resolution_system.rs  input_system.rs  mod.rs  movement_system.rs  resource_meter_system.rs  state_machine_system.rs  time_freeze_system.rs
crates/vscr-data/: Cargo.toml
crates/vscr-data/src/: loaders.rs
crates/vscr-debug/: Cargo.toml
crates/vscr-debug/src/: frame_step.rs  hitbox_viewer.rs  lib.rs  state_overlay.rs
crates/vscr-demo/: Cargo.toml  scene.toml
crates/vscr-demo-test/: Cargo.toml
crates/vscr-demo-test/src/: lib.rs
crates/vscr-demo/src/: main.rs
crates/vscr-dsl/: Cargo.toml
docs/: vision.md
docs/progress/: 2025-11-28_architecture-checkpoint.md
