[workspace]
members = [
    "crates/vscr-core",
    "crates/vscr-dsl",
    "crates/vscr-data",
    "crates/vscr-debug",
    "crates/vscr-demo",
]

# optional shared settings
[workspace.package]
edition = "2021"

[workspace.dependencies]
bevy = { version = "0.17.3", default-features = false, features = ["bevy_winit","x11"]}
serde = { version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1" 